--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nestedScrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkOrange"
+    android:background="@android:color/white"
     android:fitsSystemWindows="true"
     tools:context=".LoginActivity">
 
@@ -19,53 +18,49 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="16dp"
-            android:src="@drawable/logo_white" />
+            android:src="@drawable/logo_color" />
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/textInputLayoutEmail"
-            android:layout_width="match_parent"
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/editTextEmail"
+            android:layout_width="256dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            app:errorEnabled="true">
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="8dp"
+            android:background="@drawable/reg_edittext_style"
+            android:hint="Email"
+            android:inputType="textEmailAddress" />
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/editTextEmail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Email"
-                android:inputType="textEmailAddress" />
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/textInputLayoutPassword"
-            android:layout_width="match_parent"
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/editTextPassword"
+            android:layout_width="256dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:errorEnabled="true"
-            app:passwordToggleEnabled="true"
-            app:passwordToggleTint="@color/colorPrimary">
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="8dp"
+            android:background="@drawable/reg_edittext_style"
+            android:hint="Password"
+            android:inputType="textPassword" />
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/editTextPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Password"
-                android:inputType="textPassword" />
-        </android.support.design.widget.TextInputLayout>
+        <ProgressBar
+            android:id="@+id/progressBar_login"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/buttonLogin"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/shaping_buttons"
             android:text="Login"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:textSize="20dp" />
 
         <TextView
             android:id="@+id/textViewCreateAccount"
@@ -75,7 +70,9 @@
             android:layout_marginBottom="16dp"
             android:gravity="center_horizontal"
             android:text="@string/text_not_member"
-            android:textColor="@android:color/white"
+            android:textColor="@color/darkOrange"
+            android:textSize="15dp"
             android:textStyle="bold" />
+
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
