--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".Menu_Activity"
-    tools:showIn="@layout/app_bar_menu_">
+    tools:context=".MainActivity">
 
     <FrameLayout
         android:id="@+id/content"
@@ -27,4 +26,5 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/navigation" />
+
 </RelativeLayout>
