--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@id/nestedScrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkOrange"
+    android:background="@android:color/white"
     android:fitsSystemWindows="true"
     tools:context=".RegisterActivity">
 
@@ -17,98 +16,71 @@
         android:layout_marginRight="16dp"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imageView_avareg"
+            android:layout_width="125dp"
+            android:layout_height="125dp"
             android:layout_gravity="center_horizontal"
-            android:layout_margin="10dp"
-            android:src="@drawable/logo_white" />
+            android:src="@drawable/ava_regnew" />
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/textInputLayoutUserName"
-            android:layout_width="match_parent"
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/editTextUserName"
+            android:layout_width="256dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            app:errorEnabled="true">
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="8dp"
+            android:background="@drawable/reg_edittext_style"
+            android:hint="Name"
+            android:inputType="textPersonName" />
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/editTextUserName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Name"
-                android:inputType="textPersonName" />
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/textInputLayoutEmail"
-            android:layout_width="match_parent"
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/editTextEmail"
+            android:layout_width="256dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            app:errorEnabled="true">
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="8dp"
+            android:background="@drawable/reg_edittext_style"
+            android:hint="Email"
+            android:inputType="textEmailAddress" />
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/editTextEmail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Email"
-                android:inputType="textEmailAddress" />
-        </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/textInputLayoutPassword"
-            android:layout_width="match_parent"
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/editTextPassword"
+            android:layout_width="256dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:errorEnabled="true"
-            app:passwordToggleEnabled="true"
-            app:passwordToggleTint="@color/colorAccent">
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="8dp"
+            android:background="@drawable/reg_edittext_style"
+            android:hint="Password"
+            android:inputType="textPassword" />
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/editTextPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Password"
-                android:inputType="textPassword" />
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/textInputConfirmPassword"
-            android:layout_width="match_parent"
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/editTextConfirmPassword"
+            android:layout_width="256dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:errorEnabled="true"
-            app:passwordToggleEnabled="true"
-            app:passwordToggleTint="@color/colorAccent">
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="8dp"
+            android:background="@drawable/reg_edittext_style"
+            android:hint="Confirm Password"
+            android:inputType="textPassword" />
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/editTextConfirmPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Confirm Password"
-                android:inputType="textPassword" />
-        </android.support.design.widget.TextInputLayout>
+        <ProgressBar
+            android:id="@+id/progressBar_reg"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/buttonRegister"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:background="@color/colorPrimary"
-            android:text="Register"
-            android:textColor="@android:color/white" />
-
-        <TextView
-            android:id="@+id/textViewLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:text="Back To Login"
+            android:layout_marginTop="16dp"
+            android:layout_weight="1"
+            android:background="@drawable/shaping_buttons"
+            android:text="Register"
             android:textColor="@android:color/white"
-            android:textStyle="bold" />
+            android:textSize="20dp" />
+
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
