--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -15,11 +15,11 @@
         android:orientation="vertical"
         android:padding="3dp">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image_view_account"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_gravity="center"
+            android:layout_gravity="center_horizontal"
             android:src="@mipmap/ic_launcher_round" />
 
         <TextView
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="2dp"
-            android:text="Kal Kausar"
+            android:text="username"
             android:textColor="#fff"
             android:textSize="20dp" />
 
@@ -36,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="2dp"
-            android:text="kalkausar98@gmail.com"
+            android:text="email"
             android:textColor="#fff"
             android:textSize="20dp" />
 
