--- a/app/src/main/res/layout/row_item_grid_menu.xml
+++ b/app/src/main/res/layout/row_item_grid_menu.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/parentLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
+
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,16 +27,16 @@
                 app:srcCompat="@drawable/plane" />
 
             <TextView
-                android:layout_below="@+id/imageView"
                 android:id="@+id/text_view_name_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pesawat"
+                android:layout_below="@+id/imageView"
                 android:layout_centerHorizontal="true"
+                android:padding="2dp"
+                android:text="Pesawat"
                 android:textColor="@color/black"
                 android:textSize="12dp"
-                android:textStyle="italic"
-                android:padding="2dp"/>
+                android:textStyle="italic" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
