--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="dark2orange">#FF4500</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
+    <color name="lightGray">#D3D3D3</color>
 </resources>
