--- a/app/src/main/res/layout/activity_hotel.xml
+++ b/app/src/main/res/layout/activity_hotel.xml
@@ -4,40 +4,215 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/darkOrange"
     android:gravity="center"
+    android:orientation="horizontal"
     tools:context=".HotelActivity">
 
-    <LinearLayout
-        android:id="@+id/relative_layout_contruction_hotel"
+
+    <RelativeLayout
+        android:id="@+id/relative_layout_content_hotel"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:background="@drawable/ic_backgroundwhite"
+        android:backgroundTint="@color/white"
+        android:padding="20dp">
 
-        <ImageView
-            android:id="@+id/imageView_hotel"
+        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/card_view_flight_data"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_centerInParent="true"
-            android:foregroundGravity="center_vertical"
-            android:src="@drawable/recontruction" />
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@color/white"
+            android:elevation="15dp"
+            app:cardCornerRadius="10dp">
 
-        <TextView
-            android:id="@+id/textview_title_Hotel"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/imageView_detail"
-            android:text="@string/hotel_belum_tersedia"
-            android:textSize="20dp"
-            android:textStyle="bold" />
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textview_desc_hotel"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/imageView_detail"
-            android:text="@string/contruction"
-            android:textSize="20dp" />
-    </LinearLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="15dp">
 
+                    <TextView
+                        android:id="@+id/text_view_name_tamu"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="2dp"
+                        android:text="Nama Pelanggan"
+                        android:textColor="#666"
+                        android:textSize="12dp" />
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edit_Text_Name_Tamu"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/text_view_name_tamu"
+                        android:layout_gravity="center"
+                        android:drawableLeft="@drawable/ic_my_user"
+                        android:drawablePadding="10dp"
+                        android:drawableTint="@color/darkOrange"
+                        android:hint="Nama Pelanggan"
+                        android:inputType="text" />
+
+                    <TextView
+                        android:id="@+id/text_view_name_hotel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/edit_Text_Name_Tamu"
+                        android:layout_marginLeft="2dp"
+                        android:text="Nama Hotel"
+                        android:textColor="#666"
+                        android:textSize="12dp" />
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edit_Text_Name_Hotel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/text_view_name_hotel"
+                        android:layout_gravity="center"
+                        android:drawableLeft="@drawable/ic_hotel"
+                        android:drawablePadding="10dp"
+                        android:drawableTint="@color/darkOrange"
+                        android:hint="Nama Hotel"
+                        android:inputType="text" />
+
+                    <TextView
+                        android:id="@+id/text_view_checkin"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/edit_Text_Name_Hotel"
+                        android:layout_marginLeft="2dp"
+                        android:text="Tanggal Check-In"
+                        android:textColor="#666"
+                        android:textSize="12dp" />
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edit_Text_Checkin"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/text_view_checkin"
+                        android:layout_gravity="center"
+                        android:drawableLeft="@drawable/ic_calendar"
+                        android:drawablePadding="10dp"
+                        android:drawableTint="@color/darkOrange"
+                        android:editable="false"
+                        android:focusable="false"
+                        android:hint="Check-in"
+                        android:inputType="none" />
+
+                    <TextView
+                        android:id="@+id/text_view_checkout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/edit_Text_Checkin"
+                        android:layout_marginLeft="2dp"
+                        android:text="Tanggal Check-Out"
+                        android:textColor="#666"
+                        android:textSize="12dp" />
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edit_Text_Checkout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/text_view_checkout"
+                        android:layout_gravity="center"
+                        android:drawableLeft="@drawable/ic_calendar"
+                        android:drawablePadding="10dp"
+                        android:drawableTint="@color/darkOrange"
+                        android:editable="false"
+                        android:focusable="false"
+                        android:hint="Check-Out"
+                        android:inputType="none" />
+
+                    <TextView
+                        android:id="@+id/text_view_JmlTamu"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/edit_Text_Checkout"
+                        android:layout_marginLeft="2dp"
+                        android:text="Jumlah Tamu"
+                        android:textColor="#666"
+                        android:textSize="12dp" />
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edit_Text_JmlTamu"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/text_view_JmlTamu"
+                        android:layout_gravity="center"
+                        android:drawableLeft="@drawable/ic_group"
+                        android:drawablePadding="10dp"
+                        android:drawableTint="@color/darkOrange"
+                        android:hint="Jumlah Tamu"
+                        android:inputType="number" />
+
+                    <TextView
+                        android:id="@+id/text_view_room"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/edit_Text_JmlTamu"
+                        android:layout_marginLeft="2dp"
+                        android:text="Keterangan kamar"
+                        android:textColor="#666"
+                        android:textSize="12dp" />
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edit_Text_Room"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/text_view_room"
+                        android:layout_gravity="center"
+                        android:drawableLeft="@drawable/ic_room"
+                        android:drawablePadding="10dp"
+                        android:drawableTint="@color/darkOrange"
+                        android:hint="Kamar"
+                        android:inputType="text" />
+
+                    <TextView
+                        android:id="@+id/text_view_nmrKwitansi"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/edit_Text_Room"
+                        android:layout_marginLeft="2dp"
+                        android:text="Nomor Kwitansi"
+                        android:textColor="#666"
+                        android:textSize="12dp" />
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edit_Text_NmrKwitansi"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/text_view_nmrKwitansi"
+                        android:layout_gravity="center"
+                        android:drawableLeft="@drawable/ic_bill"
+                        android:drawablePadding="10dp"
+                        android:drawableTint="@color/darkOrange"
+                        android:hint="Nomor Kwitansi"
+                        android:inputType="text" />
+
+                    <ProgressBar
+                        android:id="@+id/progressBar_hotel"
+                        style="?android:attr/progressBarStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/edit_Text_NmrKwitansi" />
+
+                    <Button
+                        android:id="@+id/button_save_hotel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/edit_Text_NmrKwitansi"
+                        android:layout_marginTop="16dp"
+                        android:background="@drawable/shaping_buttons"
+                        android:text="Save"
+                        android:textColor="@android:color/white"
+                        android:textSize="20dp" />
+
+                </RelativeLayout>
+            </ScrollView>
+        </android.support.v7.widget.CardView>
+    </RelativeLayout>
 </RelativeLayout>
